--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5220,14 +5220,17 @@ ROM_psychological_warfare:0 "Phychological Warfare"
 ROM_continue_democratization:0 "Continue Democratisation"
 ROM_continue_democratization_desc:0 "The idea of democracy was one of the strongest founding principals for Romania. While it has its faults, this system has generally worked well enough so far. Besides, if a liberal were to take power then a strong, conservative parliment would be benefit us."
 ROM_decentralization:0 "Decentralization"
-ROM_revive_the_committee_on_the_agrarian_question:0 "Revive the Committee on the Agrarian Question"
+ROM_revive_the_committee_on_the_agrarian_question:0 "Committee on the Agrarian Question"
 ROM_decentralization_desc:0 "Romania is full of many different diverse communities with different needs. Local governments will understand their peoples needs best, and we should empower then."
 ROM_the_burdens_they_endure:0 "Special Privilege to Soldiers"
 ROM_the_burdens_they_endure_desc:0 "Being a soldier is the hardest job one can have. Their devotion to Romania is unmatched, and they are the backbone of the state. We must reward our loyal soldiers with additional benefits."
+ROM_populist_rhetoric:0 "Populist Rhetoric"
+ROM_consolidate_support_amongst_rural_areas:0 "Consolidate Support in Rural Romania"
+ROM_challenge_pc_dominance_of_urban_romania:0 "Contest PC Dominance of Urban Romania"
 ROM_religious_tolerance:0 "Religious Tolerance"
 ROM_the_uniting_principal:0 "The Uniting Principals"
 ROM_compassionate_conservatism:0 "Compassionate Conservatism"
-ROM_building_a_new_consensus:0 "Building a new Concensus"
+ROM_building_a_new_consensus:0 "Building a New Concensus"
 ROM_what_were_fighting_for:0 "What We're Fighting For"
 ROM_romania_for_those_who_earn_it:0 "Romania For Those Who Earn It"
 ROM_those_who_are_often_forgotten:0 "Those Who Are Often Forgotten"
@@ -5394,7 +5397,7 @@ ROM_crush_the_protesters:0 "Declare a State of Emergency"
 ROM_crush_the_protesters_desc:0 ""
 ROM_the_unholy_alliance:0 "The Unholy Alliance"
 ROM_the_unholy_alliance_desc:0 ""
-ROM_disband_the_parliament:0 "Disband The Parliament"
+ROM_disband_the_parliament:0 "Ban the PNL & PCD"
 ROM_disband_the_parliament_desc:0 ""
 ROM_the_peoples_dictator:0 "The People's Dictator"
 ROM_the_peoples_dictator_desc:0 ""
@@ -5402,7 +5405,7 @@ ROM_get_party_in_line:0 "Get The Party in Line"
 ROM_get_party_in_line_desc:0 ""
 ROM_the_carpist_renaissance:0 "The Carpist Renaissance"
 ROM_the_carpist_renaissance_desc:0 ""
-ROM_national_unity:0 "The National Unity State"
+ROM_national_unity:0 "Unity in Action"
 ROM_national_unity_desc:0 ""
 ww1_romania.35.t:0 "Alexandru Marghiloman Proposes Press Censorship"
 ww1_romania.35.d:0 "As we work towards restoring decency and cooperation in our politics once again, a question amongst Carps government has arised: can the anarchists, the agitators, the embezzlers, the looters, and people who in many instances have absolutely no clue what they are doing be trusted to act in good faith? They already tried a silly boycott of our government before, and they already organized large disruptive protests just because they lost, so who's to say they wouldn't try to go further? Marghiloman in particular is concerned with this possibility, and has concepts of a plan to begin censoring news surrounding the PNL, weakening their ground game amongst voters. This would help us win future elections against the PNL, although it could anger some CINO's in the party and possibly push some of them towards the PCD or even the PNL"
@@ -5435,7 +5438,8 @@ ROM_form_the_fppr_desc:0 ""
 ROM_deal_with_the_liberal_king:0 "Deal With the Liberal King"
 ROM_deal_with_the_liberal_king_desc:0 "The last man that can threaten our power is the king himself. Aligned with the liberals, King Ferdinand clearly cannot be trusted! He would take any opprotunity he could get to depose us for his prefered party, the PNL - or whats left of it. With parliament disbanded, Carp himself will assume responsibility for writing a new constitution, one which will protect Romanian democracy from the king by removing his ability to dismiss governments."
 deal_with_lib_king.tt:0 "Gets event '§YThe Carp Constitution§!'\nDisables the decision category §Y'The Kings Country§!' and all relating decisions and events. The king will no longer be able to §Rdismiss§! our government, and his opinion of us will no longer effect our §YPolitical Power§! or §YStability§!"
-ROM_consolidate_the_dictatorship:0 "Consolidate the Dictatorship"
+ROM_consolidate_the_dictatorship:0 "Take the Mask Off"
+ROM_guide_parliament:0 "Intra-Party Democracy"
 ROM_consolidate_the_dictatorship_desc:0 ""
 ROM_the_national_ideal:0 "The National Ideal"
 ROM_the_national_ideal_desc:0 "The National Ideal is an editorial that Carp published, speaking of how Romania's survival was uncertain as long as Russia bordered the Danube Delta, and pushes for the reclamation of Bessarabia from Russia, and that we must seek greater cooperation with the Central Powers. "
