--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2770,10 +2770,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_dismiss_hamdullah_suphi_tanriover_tt:0 "Modify §YCommittee of Union and Progress§! by\n£population_texticon  Monthly Population: §R-2.5%§!\n£stability_texticon  Stability: §R-2.50%§!\n£research_speed_texticon  Research Speed: §R-1.50%§!\n\n"
  TUR_utilize_halide_edib_adivar:0 "Utilize [ROOT.TUR_halide_edib_adivar.GetName]"
  TUR_utilize_halide_edib_adivar_desc:0 "Though not an official part of the government, [ROOT.TUR_halide_edib_adivar.GetName] is an influential member of the committee. Her opinions shall influence the actions taken by the state."
- TUR_utilize_halide_edib_adivar_tt:0 "Modify §YCommittee of Union and Progress§! by\n£manpower_texticon  Recruitable Population: §Y1.00%§!\n£stability_texticon  Stability: §R-5.00%§!\n£war_support_modifiericons_texticon  War Support: §G+2.50%§!\n\n"
+ TUR_utilize_halide_edib_adivar_tt:0 "Modify §YCommittee of Union and Progress§! by\n£manpower_texticon  Recruitable Population Factor: §G5%§!\n£stability_texticon  Stability: §R-5.00%§!\n£war_support_modifiericons_texticon  War Support: §G+2.50%§!\n£research_speed_texticon  Research Speed: §G+2.50%§!\n\n"
  TUR_dismiss_halide_edib_adivar:0 "Dismiss [ROOT.TUR_halide_edib_adivar.GetName]"
  TUR_dismiss_halide_edib_adivar_desc:0 "[ROOT.TUR_halide_edib_adivar.GetName] has overstayed her welcome. It's time for him to be refrained from state affairs."
- TUR_dismiss_halide_edib_adivar_tt:0 "Modify §YCommittee of Union and Progress§! by\n£manpower_texticon  Recruitable Population: §Y-1.00%§!\n£stability_texticon  Stability: §G+5.00%§!\n£war_support_modifiericons_texticon  War Support: §R-2.50%§!\n\n"
+ TUR_dismiss_halide_edib_adivar_tt:0 "Modify §YCommittee of Union and Progress§! by\n£manpower_texticon  Recruitable Population Factor: §R-5%§!\n£stability_texticon  Stability: §G+5.00%§!\n£war_support_modifiericons_texticon  War Support: §R-2.50%§!\n£research_speed_texticon  Research Speed: §R-2.50%§!\n\n"
  TUR_utilize_cavid_bey:0 "Utilize [ROOT.TUR_cavid_bey.GetName]"
  TUR_utilize_cavid_bey_desc:0 "Though not an official part of the government, [ROOT.TUR_cavid_bey.GetName] is an influential member of the committee. His opinions shall influence the actions taken by the state."
  TUR_utilize_cavid_bey_tt:0 "Modify §YCommittee of Union and Progress§! by\n£construction_speed_texticon  Local Construction Speed: §G+2.50%§!\n£efficiency_growth_texticon  Production Efficiency growth: §G+5.00%§!\n£production_licence_cost_texticon  License purchase cost: §G-5%§!\n\n"
