aleppo governor event chain

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4628,6 +4628,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.25.t:0 "Appointment of the new Governor of Mount Lebanon"
  ottoman_syria.25.d:0 "Guaranteed under the Basic law, Mutasarrifate of Mount Lebanon is an autonomous body that is independent in its internal matters. As the Administrative Council of the Mutasarrifate elects its own Mutasarrif, the old ruler of Mount Lebanon Yusuf Franko Paşa has been replaced with Ohannes Paşa. Unlike his predecessor, which violated the Basic system, interfered in judicial affairs, assaulted the powers of the Administrative Council among other more controversial moves, Ohannes Paşa is viewed just, generous and polite."
  ottoman_syria.25.a:0 "A safe breath for Mount Lebanon."
+ ottoman_syria.32.tt:0 "Modify §YCemâl's Syria§! by\n£political_power_texticon  Political Power Gain: §R-3%§!\n\n"
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
