--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5109,8 +5109,8 @@
  TUR_crush_the_arabist_movement_desc:0 "Opposition of the Arabist movement and its effects on our lands have been minimized. While we still have the chance, we must put the nail on the coffin of the Arabist movement, and other separatist movements to come."
  TRS_arab_opposition_has_no_effect:0 "§YArab Opposition§! has no negative modifiers on our nation.\n"
  TUR_remove_arab_opposition_tt:0 "Remove §YArab Opposition§!.\n"
- TUR_subject_christians:0 "Subject Christians"
- TUR_subject_christians_desc:0 "Syria is home to many religions. From Shia to Sunni Muslims, Greek Orthodoxes to Maronite Christians, even the Druze, the region has numerous religious authorities. As many Christians communities have their loyalties in European powers rather than our empire, we'll move towards integrating their structures into the empire."
+ TUR_subjugate_christians:0 "Subjugate Christians"
+ TUR_subjugate_christians_desc:0 "Syria is home to many religions. From Shia to Sunni Muslims, Greek Orthodoxes to Maronite Christians, even the Druze, the region has numerous religious authorities. As many Christians communities have their loyalties in European powers rather than our empire, we'll move towards integrating their structures into the empire."
  TUR_integrate_jewish_colonies:0 "Integrate Jewish Colonies"
  TUR_integrate_jewish_colonies_desc:0 "Ever since Jewish immigration started to the holy lands, many wealthy Jews have started to purchase land and even started their own settler colonies in the region. As these colonies and overall Jewish communities are away from state control, its time for our state to pay a visit to these "independent" colonies."
  TUR_integrate_jewish_colonies_tt:0 "Modify £ww1_flag_ISR  §YJewish Minority§! by\n£resources_texticon  Resource Gain Efficiency: §G+5.00%§!\n£construction_speed_texticon  Local Construction Speed: §R-2%§!\n\n"
