localisation for the event chain

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4628,6 +4628,32 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.25.t:0 "Appointment of the new Governor of Mount Lebanon"
  ottoman_syria.25.d:0 "Guaranteed under the Basic law, Mutasarrifate of Mount Lebanon is an autonomous body that is independent in its internal matters. As the Administrative Council of the Mutasarrifate elects its own Mutasarrif, the old ruler of Mount Lebanon Yusuf Franko Paşa has been replaced with Ohannes Paşa. Unlike his predecessor, which violated the Basic system, interfered in judicial affairs, assaulted the powers of the Administrative Council among other more controversial moves, Ohannes Paşa is viewed just, generous and polite."
  ottoman_syria.25.a:0 "A safe breath for Mount Lebanon."
+ ottoman_syria.26.t:0 "Replacing Bekir Sami Bey"
+ ottoman_syria.26.d:0 "With our arrival in Syria, we've started to replace most of the untrustworthy rules with people among our circle. The governor of Aleppo shall be no exception. The current ruler, Bekir Sami Bey, is a man who is liked by locals. Yet several of his policies contradict with our new government. We can either keep him, or replace him in favor of someone who we'll approve."
+ ottoman_syria.26.a:0 "His actions are traitorous to our state."
+ ottoman_syria.26.b:0 "Lets not stir the balance in the region."
+ ottoman_syria.27.t:0 "Replacing Bekir Sami Bey"
+ ottoman_syria.27.d:0 "As Cemâl has stood foot in Syria, he started to replace some of the local rulers in the region. His current target is the governor of Aleppo Bekir Sami Bey. He's a man that is contradicting with our state policies. As it's in all of our's interest replace this man, Cemâl pushes for the replacement of this position to be this man. We can either cave into his request, or try and push for our own candidate."
+ ottoman_syria.27.a:0 "Appoint Hasan Mazhar Bey."
+ ottoman_syria.27.b:0 "Cemâl can do his thing."
+ ottoman_syria.28.t:0 "Appointment of Hasan Mazhar Bey"
+ ottoman_syria.28.d:0 "As the Central Committe agreed for the replacement of Bekir Sami Bey, they've decided to push for their own guy instead of our preferred candidate. While we can accept the governorship of Hasan Mazhar Bey, a name known for his close affiliation with the Talat Paşa, we can try and push for our own guy into the spot."
+ ottoman_syria.28.a:0 "Accept Mazhar's governorship."
+ ottoman_syria.28.b:0 "Push for our own guy."
+ ottoman_syria.29.t:0 "Appointment of Hüseyin Kazım Bey"
+ ottoman_syria.29.d:0 "As the Central Committe agreed for the replacement of Bekir Sami Bey, they've agreed to appoint the figure we've endorsed. Hüseyin Kazım Bey, someone known to be associated with Cemâl Paşa, will be appointed as the new governor of Aleppo."
+ ottoman_syria.29.a:0 "Another figure from our ranks."
+ ottoman_syria.30.t:0 "Cemâl Pushes for His Own Man"
+ ottoman_syria.30.d:0 "As we've appointed our own figure as the governor of Aleppo, Cemâl Paşa has strongly stood against this appointment. As he refused to work with Hasan Mazhar Bey, he says the Committee should not appoint someone he cannot get along with. As a result, we can eithe accept Cemâl's candidate, or offer up a new figure as a compromise figure."
+ ottoman_syria.30.a:0 "Let him do as he pleases."
+ ottoman_syria.30.b:0 "Let's offer a compromise figure"
+ ottoman_syria.31.t:0 "Appointment of Hüseyin Kazım Bey"
+ ottoman_syria.31.d:0 "After several backs and forths with the Centrak Committee, the Committee members have finally accepted our request to replace Hasan Mazhar Bey with someone who we'll accept. As a result, the candidate we've been pushing, Hüseyin Kazım Bey, willbe appointed as the new governor of Aleppo."
+ ottoman_syria.31.a:0 "After our long struggle, we've finally secured Aleppo."
+ ottoman_syria.32.t:0 "Appointment of Mustafa Abdülhalik Bey"
+ ottoman_syria.32.d:0 "After several backs and forths with the Centrak Committee, the Committee members have finally accepted our request to replace Hasan Mazhar Bey with someone who we'll accept. Though not appointing the guy we've previously asked for, they've offered Mustafa Abdülhalik Bey as a compromise. While he's a name close to Talat Paşa, he's someone we can work with. Of course we can force our candidate against the will of the Committee, at a cost though."
+ ottoman_syria.32.a:0 "Accpet Abdülhalik's governorship."
+ ottoman_syria.32.b:0 "Force our candidate, at whatever cost."
  ottoman_syria.32.tt:0 "Modify §YCemâl's Syria§! by\n£political_power_texticon  Political Power Gain: §R-3%§!\n\n"
 
  ottoman..120.t:0 "Sects Mobilize"
