interwar admiral as well

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -2991,6 +2991,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  RUS_mikhail_stakhovich:0 "Mikhail Stakhovich"
  RUS_nikolai_nekrasov:0 "Nikolai Nekrasov"
  RUS_yuri_danilov:0 "Yuri Danilov"
+ RUS_boris_vilkitsky:0 "Boris Vilkitsky"
 
  SIB_pyotr_vologodsky:0 "Pyotr Vologodsky"
  SIB_pyotr_derber:0 "Pyotr Derber"
@@ -3016,8 +3017,6 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  TRC_fyodor_funtikov:0 "Fyodor Funtikov"
  TRC_ippolit_savitskyy:0 "Ippolit Savitskyy"
  TRC_yakov_zhitnikov:0 "Yakov Zhitnikov"
- 
- RSO_boris_vilkitsky:0 "Boris Vilkitsky"
  
  UCH_matvey_martynov:0 "Matvey Martynov"
  UCH_vladimir_akutin:0 "Vladimir Akutin"
