--- a/localisation/english/POL - Poland_l_english.yml
+++ b/localisation/english/POL - Poland_l_english.yml
@@ -62,15 +62,15 @@
 
  ### Ideas ###
  POL_central_powers_occupation:0 "Central Powers Occupation"
- POL_central_powers_occupation_desc:0 ""
+ POL_central_powers_occupation_desc:0 "The area of the Kingdom of Poland is under occupation by Germany and Austria-Hungary, which ruthlessly exploit it economically. Raw materials, food, industry and labor are subordinated to the war needs of the occupying powers, and the Polish economy is depleted to support their military effort. The future of the Kingdom lies in the hands of foreign powers, which creates frustration and a sense of powerlessness among the population. Opposition to the domination of the Central Powers is growing, while deepening the economic and political crisis in the country."
  POL_temporary_council_of_state_idea:0 "Temporary Council of State"
  POL_temporary_council_of_state_idea_desc:0 ""
  POL_unpopular_regency:0 "Unpopular Regency"
- POL_unpopular_regency_desc:0 ""
+ POL_unpopular_regency_desc:0 "Although the Regency Council formally builds the foundations of Polish statehood, its position in society is fragile. Appointed by the occupying German and Austro-Hungarian authorities, the Council is seen as a tool of foreign powers, rather than a true symbol of independence. Many Poles view it with distrust, seeing its actions as a compromise with the occupiers. Despite progress in establishing state structures, the lack of popular support hinders effective governance and deepens political divisions in the country."
  POL_oath_crisis:0 "Oath Crisis"
- POL_oath_crisis_desc:0 ""
+ POL_oath_crisis_desc:0 "Faced with the unfair treatment of the Polish cause by the Central Powers, the soldiers of the Polish Legions from the First and Third Brigades, loyal to Józef Piłsudski, refused to take the oath of loyalty to the Kingdom of Poland and to honor the brotherhood of arms to the armies of Germany and Austria-Hungary in the Great War. The Oath Crisis of the legionnaires cast a shadow over the ability to recruit units of the Polish Armed Forces (Polnische Wehrmacht) in the Kingdom and triggered a political crisis in the country."
  POL_governor_general_idea:0 "Governor-General Rule"
- POL_governor_general_idea_desc:0 ""
+ POL_governor_general_idea_desc:0 "Governor-general of Generalgouvernement Warschau Hans Hartwig von Beseler de facto governs the Kingdom of Poland while balancing the realisation of German interests with Polish independence aspirations. His rule in Warsaw is based on a policy of strict control while attempting to maintain a semblance of autonomy and make concessions to the Poles, which arouses mixed feelings among the Polish people. Beseler is seen as a symbol of German occupation, and his rule increases the sense of dependence on foreign powers and the social rift between cooperation and resistance among Poles."
  POL_not_yet_lost: "Poland Is Not Yet Lost!"
  POL_not_yet_lost_desc: "After the Great War and the defeat in it, of all three partitioners, the dream of many generations of Poles about their desired independence finally came true. Years of captivity of Poland being in the shackles of the partitioners, strengthened by the spirit of romanticism and messianism, expressed in the literature of Mickiewicz and Słowacki, bought with the blood shed in the national uprisings of November 1831 and January 1863, intensified the spirit of Poles who fought "For our freedom and yours" wherever they were. The end of the 1860s and the defeats of the national uprisings brought about the strengthening of the idea of positivism on Polish soil, included in the literature of Henryk Sienkiewicz or Bolesław Prus, aiming at organic work at the basis of the development of the Polish nation. The rise and development of Polish nationalism, based on the ideas of positivism and proclaiming the unification of Polish lands from all the partitions, strengthened both physically and materially the Polish nation in its aspiration for an independent state. The beginning of the 1890th brought modernism and neo-Romanticism to Poles, described as "Young Poland", expressed in the prose of Reymont, Żeromski or Wyspiański. This era strengthened expressionism, which gained a lot of attention, especially in socialist circles, which aimed at levelling social inequalities and overthrowing the reactionary order in Europe. The Polish society, which differed in its worldview, had one goal in common; this goal was to regain its statehood and the independence it would defend to the end. "Poland has not yet perished, So long as we still live.""
  POL_ruined_economy: "Ruined Economy"
@@ -106,8 +106,9 @@
  ww1_poland.30.a:0 "Białystok is returning to it's motherland."
  
  ww1_poland.26.title:0 "Takeover of Wilno"
- ww1_poland.26.desc:0 ""
+ ww1_poland.26.desc:0 "The Polish self-defense units in Vilnius, anticipating that the Germans would hand over Vilnius to the Bolsheviks, decided to take control of the city on their own and remove the German troops from the city. As a result of the negotiations, the German command decided to evacuate the city and not to resist the Polish forces. Also, the Lithuanian government claiming the city, unable to take control of it, withdrew with the Germans. In view of the evacuation of German troops, an attempt to seize power in the city was made by organizations of the far left. In the last days of the German occupation, communist council held two sessions, declared itself the only legal authority in the city and issued the first decrees; its headquarters was a building on Wronia Street. Troops of Polish self-defense under the command of Capt. Dąbrowski attacked the Council building capturing it and taking full control of the city while preparing for the coming of the Bolsheviks."
  ww1_poland.26.a:0 "Wilno is ours!"
+
 
  ww1_poland.27.title:0 "Legislative Sejm Elections"
  ww1_poland.27.desc:0 ""
@@ -139,8 +140,31 @@
  ww1_poland.35.a:0 "There will be no consent!"
 
  ww1_poland.36.title:0 "Restoration of the Ukrainian People's Republic"
- ww1_poland.36.desc:0 ""
+ ww1_poland.36.desc:0 "After Kyiv is seized and the right bank of Ukraine is secured, a Ukrainian People's Republic under the leadership of otaman Symon Petliura could be reconstituted. According to marshal Józef Piłsudski's vision, Ukraine will become a key element of eastern policy, creating a buffer between Poland and potential threats from the east. Formally in confederation with Poland, the Ukrainian People's Republic will be a dependent state to support Polish interests and stabilize the region. With military and economic cooperation, the new Ukraine has a chance to develop and strengthen its position."
  ww1_poland.36.a:0 "Great News"
+
+ ww1_poland.37.title:0 "Successful Coup in Lithuania"
+ ww1_poland.37.desc:0 "Reports have come in that the Lithuanian government has been overthrown, in a near bloodless coup backed by Poland. The coup was carried out by the Lithuanian branch of the Polish Military Organisation (POW) and an expeditionary force. Kaunas was secured with little resistance, and  the entire government was arrested. The new government has already begun negotiations on its status within the Polish state, in what has been described by Warsaw as “a spiritual restoration of the Commonwealth”."
+ ww1_poland.37.a:0 "Great News"
+
+ ww1_poland.38.title:0 "Failed Coup in Lithuania"
+ ww1_poland.38.desc:0 ""
+ ww1_poland.38.a:0 "Not good..."
+
+ ww1_poland.39.title:0 "Lithuanian Government Overthrown"
+ ww1_poland.39.desc:0 "Reports have come in that the Lithuanian government has been overthrown, in a near bloodless coup backed by Poland. The coup was carried out by the Lithuanian branch of the Polish Military Organisation (POW) and an expeditionary force. Kaunas was secured with little resistance, and  the entire government was arrested. General Silvestras Žukauskas became the dictator of the new pro-Polish Lithuanian government, and Stanisław Narutowicz became the head of the civil authorities. The new government has already begun negotiations on its status within the Polish state, in what has been described by Warsaw as “a spiritual restoration of the Commonwealth”."
+ ww1_poland.39.a:0 "Poland and Lithuania together again" #Poland
+ ww1_poland.39.b:0 "Interesting..." #Others
+ ww1_poland.39.c:0 "We need to watch out for Poles" #Germany
+ ww1_poland.39.e:0 "Damned Polish imperialists" #Soviets
+
+ ww1_poland.40.title:0 "Polish-Ukrainian War"
+ ww1_poland.40.desc:0 "The conflict between Poles and Ukrainians over control of Eastern Galicia and Lemberg reaches its climax. After the collapse of Austria-Hungary, both nations seek to establish their own states, which leads to an armed clash between the reborn Poland and the West Ukrainian People's Republic. Polish forces, supported by the Polish population of Lemberg, are defending the city from Ukrainian forces that are trying to establish their power there. As the fighting escalates, the world watches with concern as this regional conflict could affect the stability of the entire Central and Eastern European region."
+ ww1_poland.40.a:0 "Eastern Galicia will be Polish!" #Poland
+ ww1_poland.40.b:0 "Eastern Galicia will be Ukrainian!" #West Ukraine
+ ww1_poland.40.c:0 "Interesting..." #Others
+ ww1_poland.40.e:0 "Oh wow" #Germans
+ ww1_poland.40.f:0 "Another imperialist war" #Soviets
 
  poland_1918_flav.2.title:0 "Poland's Wedding to the Sea"
  poland_1918_flav.2.desc:0 ""
@@ -226,43 +250,45 @@
  POL_the_belarus_offensive_desc:0 ""
 
  POL_sejny_uprising: "Sejny Uprising" 
+ POL_sejny_uprising_desc: "Work in progress..." 
  POL_coup_attempt_in_lithuania: "Coup Attempt in Lithuania"
+ POL_coup_attempt_in_lithuania_desc: "In view of Lithuania's continued rejection of Polish proposals to conclude a federation, the federation should be imposed on Lithuania after a pro-Polish government is installed in Kaunas."
 
  POL_polish_latvian_military_agreement: "Polish-Latvian Military Agreement"
  POL_polish_latvian_military_agreement_desc: ""
  POL_operation_winter: "Operation Winter"
- POL_operation_winter_desc: ""
+ POL_operation_winter_desc: "Work in progress..."
 
  POL_truce_with_the_ukrainian_peoples_republic: "Truce With Ukrainian People's Republic"
  POL_truce_with_the_ukrainian_peoples_republic_desc: "We should strive to get Ukraine for the federalist project, the war with the Ukrainian People's Republic must come to an end and Petliura should reach an anti-Soviet agreement with us."
 
  POL_resignation_of_paderewskis_cabinet: "Resignation of Paderewski's Cabinet"
- POL_resignation_of_paderewskis_cabinet_desc: ""
+ POL_resignation_of_paderewskis_cabinet_desc: "Work in progress..."
 
  ## Poland Piłsudski/Skulski Focuses ##
  POL_skulskis_cabinet: "Skulski's Cabinet"
- POL_skulskis_cabinet_desc: ""
+ POL_skulskis_cabinet_desc: "Work in progress..."
 
  POL_incorporation_of_pomerania: "Incorporation of Pomerania"
- POL_incorporation_of_pomerania_desc: ""
+ POL_incorporation_of_pomerania_desc: "Work in progress..."
  
  POL_currency_unification: "Currency Unification"
- POL_currency_unification_desc: ""
+ POL_currency_unification_desc: "Work in progress..."
 
  POL_local_government_elections: "Local Government Elections"
- POL_local_government_elections_desc: ""
+ POL_local_government_elections_desc: "Work in progress..."
 
  POL_general_commissioner_in_free_city_of_danzig: "General Commissioner in Free City of Danzig"
  POL_general_commissioner_in_free_city_of_danzig_desc: ""
 
  POL_puck_war_harbor: "Puck War Harbor"
- POL_puck_war_harbor_desc: ""
+ POL_puck_war_harbor_desc: "Work in progress..."
 
  POL_first_marshal_of_poland: "First Marshal of Poland"
- POL_first_marshal_of_poland_desc: ""
+ POL_first_marshal_of_poland_desc: "Work in progress..."
 
  POL_support_the_third_russia: "Support The "Third" Russia"
- POL_support_the_third_russia_desc: ""
+ POL_support_the_third_russia_desc: "Work in progress..."
 
  POL_treaty_of_warsaw: "Treaty of Warsaw"
  POL_treaty_of_warsaw_desc: ""
