--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -647,6 +647,8 @@
  UKR_KNG_neutrality_DEF:0 "the Kingdom of Ukraine"
  UKR_SOV_provisional:0 "Soviet Ukraine"
  UKR_SOV_provisional_communism_DEF:0 "the Provisional Workers' and Peasants' Government of Ukraine"
+ UKR_POL_neutrality:0 "Ukrainian People's Republic"
+ UKR_POL_neutrality_DEF:0 "the Ukrainian People's Republic"
  GEO_TSCN_commissariat:0 "Transcaucasian Commissariat"
  GEO_TSCN_commissariat_DEF:0 "the Transcaucasian Commissariat"
  GEO_TSCN_commissariat_ADJ:0 "Transcaucasian"
