--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -385,6 +385,7 @@
  tyrant:0 "Tyrant"
  civil_administration:0 "Civil Administration"
  knyaz_vasyl:0 "Knyaz Vasyl"
+ UKR_chief_otaman:0 "Chief Otaman"
  ww_one_trauma:0 "Great War Trauma"
  corrupted_bureaucrat:0 "Corrupt Bureaucrat"
  king_shanxi:0 "King of Shanxi"
