--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5224,11 +5224,37 @@ ROM_revive_the_committee_on_the_agrarian_question:0 "Committee on the Agrarian Q
 ROM_decentralization_desc:0 "Romania is full of many different diverse communities with different needs. Local governments will understand their peoples needs best, and we should empower then."
 ROM_the_burdens_they_endure:0 "Special Privilege to Soldiers"
 ROM_the_burdens_they_endure_desc:0 "Being a soldier is the hardest job one can have. Their devotion to Romania is unmatched, and they are the backbone of the state. We must reward our loyal soldiers with additional benefits."
+ROM_moderate_pnl:0 "The §mPCD§! has too much say in our coalition to make such drastic changes"
 ROM_populist_rhetoric:0 "Populist Rhetoric"
 ROM_consolidate_support_amongst_rural_areas:0 "Consolidate Support in Rural Romania"
 ROM_challenge_pc_dominance_of_urban_romania:0 "Contest PC Dominance of Urban Romania"
+ww1_romania.46.t:0 "PC Gains Ground Amongst Rural Voters"
+ww1_romania.46.d:0 "While traditionally rural Romania votes comfortably for the PNL, Petre Carps shift leftward has put our rural base at risk of abandoning us. If we don't win these areas, we have zero shot at winning the election and thus must address the issue. We could reinforce our positions on things like universal male suffrage to win these voters back, or try to pivot and expoit Carps trust issue amongst traditionally PC urban voters"
+ww1_romania.48.t:0 "PC accuses us of betraying Romanians in Moldova"
+ww1_romania.48.d:0 "The PC has been claiming as of late that we have plans to ally ourselves with France, and Russia by extent. They accuse us of abandoning our friends in Berlin in exchange for a nation currently oppressing our people. How should we respond?"
+ww1_romania.48.a:0 "Just focus on domestic policy, people won't pay attention to this"
+ww1_romania.48.b:0 "Play up the friendship with France, but ignore criticize Russia"
+ROM_pcd_government:0 "The government is lead by the §mPCD§!"
+ww1_romania.47.t:0 "PC Attacks us for our Protectionist Policies"
+ww1_romania.47.d:0 "The PC has been attacking us for our protectionist policies, claiming it's making food prices higher for everyone. Do we plan to double down on our position, or pivot?"
+ww1_romania.47.a:0 "Why would we flip flop on this issue and alienate our base? "
+ww1_romania.47.b:0 "Of course we're going to pivot towards the center, its just politics."
+ww1_romania.46.a:0 "We need to shore up our margins amongst rural Romania"
+ww1_romania.46.b:0 "Lets see if we can try to flip some highly educated urban voters"
+disable_htopnl:0 "§RDisables§! national focus: '§YHostile Takeover of the PNL§!'"
+ROM_election_russik_style:0 "We will manage the §lPNL§! election campaign. We will make a variety of choices on our campaign strategy, depending on what we do, we may win or lose the elections. §RWe will not be directly told the results of our decisions, so choose wisely§!"
+ww1_romania.45.t:0 "PC Attacks our Government as Corrupt"
+ww1_romania.45.d:0 "The PC has launched several attack campaigns against our government poiting out incidents of corruption or nepotism amongst the cabinet. This is a damaging attack that is decreasing our support nation wide, and we must respond. How will we?"
+ww1_romania.45.a:0 "Take these accusations head on"
+ww1_romania.45.b:0 "Just deflect, deflect, and deflect."
+pnl_standing_improve:0 "The §lPNL's§! standings in the election will improve"
+pc_standing_improve:0 "The §cPC's§! standings in the election will improve"
+	ROM_vast_political_promises:0 "Vast Political Promises"
 ROM_religious_tolerance:0 "Religious Tolerance"
 ROM_the_uniting_principal:0 "The Uniting Principals"
+ww1_romania.44.t:0 "King Carol Demands New Elections"
+ww1_romania.44.d:0 "With our government having exhausted the last of its political capital by pushing through the recent land reform bill, King Carol has been pushing us to announce new elections to shakeup the Romanian government. While the election looks to be dead heat so far, if we win a large majority it could give us a new mandate to push through additional reforms, thus agreeing to hold new elections is our only choice. Although we are relatively popular, the conservatives until Petre Carp have been reorganizing, moving to the left on many economic issues. They threaten to outflank our leftist base on several issues, which could collapse our shakey coalition. If we want to win this election, we're going to have to thread the needle between mantaining our base and appealing to the center."
+ww1_romania.44.a:0 "We look foward to expanding our majority in parliament!"
 ROM_compassionate_conservatism:0 "Compassionate Conservatism"
 ROM_building_a_new_consensus:0 "Building a New Concensus"
 ROM_what_were_fighting_for:0 "What We're Fighting For"
