--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5224,6 +5224,18 @@ ROM_revive_the_committee_on_the_agrarian_question:0 "Committee on the Agrarian Q
 ROM_decentralization_desc:0 "Romania is full of many different diverse communities with different needs. Local governments will understand their peoples needs best, and we should empower then."
 ROM_the_burdens_they_endure:0 "Special Privilege to Soldiers"
 ROM_the_burdens_they_endure_desc:0 "Being a soldier is the hardest job one can have. Their devotion to Romania is unmatched, and they are the backbone of the state. We must reward our loyal soldiers with additional benefits."
+ww1_romania.49.t:0 "1911 Elections - PNL Holds on"
+ww1_romania.49.d:0 "While it was closer then we would have liked, the results for the 1911 elections are in, and we've mantained a slight majority in parliament. With this, our mandate has been revived and we can now turn towards governing."
+ww1_romania.49.a:0 "Expected, of course!"
+
+ww1_romania.50.t:0 "1911 Elections - The PC Flips Parliament"
+ww1_romania.50.d:0 "It wasn't the result we hoped for, but the PC has won enough precentage of the vote to capture a plurality in parliament. With this, King Carol has appointed Petre Carp to form a government."
+ww1_romania.50.a:0 "We will come back at some point!"
+
+ww1_romania.51.t:0 "1911 Elections - No Party Can Form a Government"
+ww1_romania.51.d:0 "The election results are in, and the results are so close that neither party has a plurality large enough to form a governing coalition. With this, the King and the PCD have entered talks to allow a compromise government, ran by them. Thus, the PCD will be forming a government"
+ww1_romania.51.a:0 "Better then the PC, atleast!"
+
 ROM_moderate_pnl:0 "The §mPCD§! has too much say in our coalition to make such drastic changes"
 ROM_populist_rhetoric:0 "Populist Rhetoric"
 ROM_consolidate_support_amongst_rural_areas:0 "Consolidate Support in Rural Romania"
